--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,13 @@
   --white: hsl(0, 0%, 100%);
   --very-dark-cyan: hsl(156, 42%, 18%);
   --pink: hsl(0, 85%, 79%);
+
+  --tw-screen-sm: 640px;
+  --tw-screen-md: 768px;
+  --tw-screen-lg: 1024px;
+  --tw-screen-xl: 1280px;
+  --tw-screen-2xl: 1536px;
+  --tw-color-inherit: ;
 }
 
 body {
