--- a/styles/ProductDetail.module.css
+++ b/styles/ProductDetail.module.css
@@ -1,10 +1,10 @@
 .modal {
   position: fixed;
-  translate: (50%, 50%);
   top: 0;
   width: 50%;
-  height: 100%;
+  height: 500px;
   background-color: var(--very-dark-cyan);
+  border-radius: 10px;
 }
 
 .modal__close {
@@ -30,9 +30,8 @@
 }
 
 .modal img {
-  display: grid;
-  width: 50%;
-  border-radius: 10px 10px 0 0;
+  width: 20%;
+  border-radius: 10px;
   background-size: cover;
 }
 
