--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,95 @@ a {
 a:hover {
   color: var(--pink);
 }
+
+.button {
+  background-color: var(--dark-grayish-blue);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: var(--dark-cyan);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+  margin: 1rem;
+  background-color: var(--white);
+  border: 1px solid var(--dark-grayish-blue);
+
+  display: none;
+}
+
+.formShow {
+  display: flex;
+}
+
+.buttonHide {
+  display: none;
+}
+
+.form input,
+.form textarea {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid var(--dark-grayish-blue);
+  border-radius: 5px;
+}
+
+.form input:focus,
+.form textarea:focus {
+  outline: none;
+  border: 1px solid var(--dark-cyan);
+}
+
+.form textarea {
+  height: 100px;
+}
+
+.buttonSave {
+  width: 100%;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  background: var(--dark-cyan);
+}
+
+.buttonSave:hover {
+  background: var(--very-dark-cyan);
+}
+
+.buttonCancelar {
+  width: 100%;
+  border: 1px solid var(--pink);
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.buttonCancelar:hover {
+  background-color: var(--pink);
+  color: var(--white);
+}
+
+.tableShow {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+  margin: 1rem;
+  background-color: var(--white);
+  border: 1px solid var(--dark-grayish-blue);
+}
